fix: [#349] missing text align in text stories

--- a/components/wrappers/TextStories/TextStories.css
+++ b/components/wrappers/TextStories/TextStories.css
@@ -8,3 +8,15 @@
 .text-stories >>> .text-alignment-right {
   text-indent: 0;
 }
+
+.text-stories >>> .text-alignment-left {
+  text-align: left;
+}
+
+.text-stories >>> .text-alignment-center {
+  text-align: center;
+}
+
+.text-stories >>> .text-alignment-right {
+  text-align: right;
+}
